# This is the top-level Makefile.am. It is normally very brief, and in this case
# is just an instruction to recurse into SUBDIRS and run make in each one.
# SUBDIRS is a space-separated list, and can use . to mean this directory, which
# is normally processed last.

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src scripts

EXTRA_DIST = \
	README.md \
	VERSION

